# sdl-imgui

./: .gitignore  CMakeLists.txt
extras/: sdl2-config.cmake
src/: main.cpp
